# ChangeLog for net-p2p/museek+
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/museek+/Attic/ChangeLog,v 1.13 2008/05/28 20:58:57 coldwind Exp $

  28 May 2008; Santiago M. Mola <coldwind@gentoo.org>
  -files/museek+-0.1.12-libxmlpp-dep-order.patch,
  -files/museek+-0.1.12-musetup-gtk-spaces.patch,
  -files/museek+-0.1.12-scons-0.96.94.patch, -files/museek,
  -museek+-0.1.12.ebuild:
  Remove old version.

*museek+-0.1.13-r3 (30 Apr 2008)

  30 Apr 2008; Santiago M. Mola <coldwind@gentoo.org>
  +files/museek+-0.1.13-gcc43.patch, -museek+-0.1.13-r1.ebuild,
  -museek+-0.1.13-r2.ebuild, +museek+-0.1.13-r3.ebuild:
  Fix missing dodir (bug #219007) and compatibility with gcc 4.3 (bug
  #219352). Remove old.

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> museek+-0.1.12.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

*museek+-0.1.13-r2 (16 Feb 2008)

  16 Feb 2008; Santiago M. Mola <coldwind@gentoo.org>
  +museek+-0.1.13-r2.ebuild:
  Revbump fixing #210364

  24 Jan 2008; Santiago M. Mola <coldwind@gentoo.org>
  museek+-0.1.13-r1.ebuild:
  Keyworded ~amd64 and an elog message added warning about extra software
  needed to run musetup-{gtk,qt}, #193444.

  13 Oct 2007; Santiago M. Mola <coldwind@gentoo.org>
  museek+-0.1.13-r1.ebuild:
  Depend on >=dev-util/cmake-2.4.6 (#195414).

*museek+-0.1.13-r1 (23 Sep 2007)

  23 Sep 2007; Santiago M. Mola <coldwind@gentoo.org>
  +files/museek+-0.1.13-optional-deps.patch,
  files/museek+-0.1.13-post_release_fixes.patch, -museek+-0.1.13.ebuild,
  +museek+-0.1.13-r1.ebuild:
  Make optional deps configurable.

*museek+-0.1.13 (22 Sep 2007)

  22 Sep 2007; Santiago M. Mola <coldwind@gentoo.org>
  +files/museek+-0.1.13-post_release_fixes.patch, +museek+-0.1.13.ebuild:
  Bump to 0.1.13.

  03 Jul 2007; Santiago M. Mola <coldwind@gentoo.org> metadata.xml:
  Update my maintainer data.
