@@ -2,6 +2,6 @@ AUX museek+-0.1.13-gcc43.patch 2613 RMD160 6ea01c8d3e0518261b2b56b89506d90736720
 AUX museek+-0.1.13-optional-deps.patch 2982 RMD160 fb285a39b704e7fb841c0319a744a870c6014740 SHA1 35d23e5347bf1971b27e6cfea2f2e891d143be89 SHA256 058496ff74454995dfef8c93775fe89a9008af3d97c327e040ca16b0eaa9d94d
 AUX museek+-0.1.13-post_release_fixes.patch 6801 RMD160 d039d8c09241dab2e93a082817197d7c14ba6212 SHA1 4ef183c740df67b8b5347083504c027586885899 SHA256 a99b83a517061efe7d1d027f669e903eb66a7be4590ade5bacfdc5523d2826ae
 DIST museek+-0.1.13.tar.bz2 1186870 RMD160 25e1febce98ee536ba380e58b052ed7113f84d06 SHA1 003cc4f7d98b8bce8cdfa969b370a5e3c10ca9a1 SHA256 e1958556b30dee59eb7648973432d4d048f30c79f38ab7145fca6f0f2690473e
-EBUILD museek+-0.1.13-r3.ebuild 2757 RMD160 9bd716bfb8c84b863de9ea75fc572a8fcc272988 SHA1 d225a9e7402e6e219b4c573c12a4f1087a67469f SHA256 7da94eabdfadbaad24b3e7c794bd44c8c3e0b9d46fa72f4e44ae2549d30566eb
-MISC ChangeLog 2710 RMD160 2b683525590da36c7e05431eea50fdab53578525 SHA1 a09cdf5b5b20548b10d6942f5c1ecae7b5babdb0 SHA256 f6d8c3052388a92c2f2f26000863019db123970fbd39294345beab5c2df68125
+EBUILD museek+-0.1.13-r3.ebuild 2754 RMD160 fd4010d97f1a2b19b997e5049f98e6dc03237c83 SHA1 d14739e01faae170927d77c6449a42de61e5dcad SHA256 53bb5df69df1e9f9a37bcbdc96f5c77eb1ff7609898137b9d401543561942466
+MISC ChangeLog 2829 RMD160 be4b2cc0c3583912dd895f929efe439fc7c966c2 SHA1 63e29240482300cf082583ae45db39786109095f SHA256 7433e5f30327bfae6828b5f3a9bf7255db88fd5d98d24ed7f730d3f48299755a
 MISC metadata.xml 252 RMD160 7e449912477ab0ef9b7d65a9b64dc43231363517 SHA1 e8ec909da9c64cc2d1b86d75290af7f143222aad SHA256 a82843a279b0bc7cc4f5a1ae7a89c75976e1bac6def09f666c5c5ffc7e34f7dc
