@@ -1,8 +1,8 @@
 DIST qbittorrent-0.9.3.tar.gz 836332 RMD160 865ae153ce7716cb4720ece6746c8d55dc9764ff SHA1 b8ebe28a3ce6c0d789b50faf56197e8df891191a SHA256 532308bf882b9f55876599b4bcaefbc31bb45ea9ff62ce6805c2688c06f03ca2
 DIST qbittorrent-1.0.0.tar.gz 1384049 RMD160 86266a164b0b36276ca766fe9aae8759e6a2e28b SHA1 d498f0f537a49b8f7421284127e05af02f62ba1a SHA256 a247223dd2d3e2490d5c3cce4764d40aaf486548bf77835729d42e82e12aad25
 DIST qbittorrent-1.1.0rc2.tar.gz 1514415 RMD160 899ec1836e9c9603bd3759c0284c3859a5ec228a SHA1 814c1c9c6b101beaf4a87d30c59419abbdee599d SHA256 6572b7ddaabfa3c3c332fb9a210d7cb24ee7c465a99bdb018180c9f16b7101fa
-EBUILD qbittorrent-0.9.3.ebuild 1160 RMD160 e805020327733a51c53000d4758fdb9f621d1fa8 SHA1 a99f50a36603c94be29445eaeef02e43a33f8f85 SHA256 70eb2d01651c3c908f3e5da71cb90c5ae53e306daa95677fefebb566162ae829
+EBUILD qbittorrent-0.9.3.ebuild 1163 RMD160 97c44201ef17593993cb5c0ff7dca3e01ca87544 SHA1 8c3c2555bfeef87be3af8abccd0f5c8a71603ee1 SHA256 4ae83ad4ecb74d7687e288f4463e0e12c25ec5b64a29827f12f3ad447d7b1ded
 EBUILD qbittorrent-1.0.0.ebuild 1292 RMD160 804ff8ec863a41cee35f635b778bf9427adf2b47 SHA1 ed73804cf68d61841e0ddc4e3a48bab04c45754a SHA256 901b1d5790d0106d00a1ab2f3d565a0725f82bb231186072807d1466f27e0867
 EBUILD qbittorrent-1.1.0_rc2.ebuild 1300 RMD160 f5574105a6be4c66865d8ef3fcb0f92c6975243b SHA1 f997e9783a65c11792a45a97cf6c2027ae227e1f SHA256 76b91a5f59cb122cafbde21d1ab84e5e500583844372340ce3d026c4316c0fc9
-MISC ChangeLog 6556 RMD160 a934f232f3640a159ac245c9b2eea23a206cde8b SHA1 d268313053b946c9664c24370d6ca3b24186d03d SHA256 78c18e6949cfe9839de3c57125627c737242260d844b30e52ecdb3a505dd6328
+MISC ChangeLog 6677 RMD160 dedf2169d0981c8837b94f3647e6009c7cbcaff9 SHA1 b24b044d1f09481f495fdf71d10b66a81b909cd2 SHA256 f29052eeb6f2fbbeb7f7540a0e282bae32a8e97cb6ea80b976d9f819b596e85d
 MISC metadata.xml 222 RMD160 0dc4b04f31dcc89402f87c352327fe327b3cf31f SHA1 540337d5841f15b43186e5858f9e24032567de08 SHA256 713b9d1548682d5c1c3686a7b0711acf065a8fa4f386883ace90359d3dceb966
